--- a/XamarinPruebas/XamarinPruebas/XamarinPruebas/Views/MainView.xaml
+++ b/XamarinPruebas/XamarinPruebas/XamarinPruebas/Views/MainView.xaml
@@ -24,13 +24,14 @@
                 Text="Amount:">
             </Label>
             <Entry
+                Keyboard ="Numeric"
                 Text="{Binding Amount, Mode=TwoWay}"
                 Placeholder="Enter the amount to convert">
             </Entry>
             <Label Text="Source rate:">
             </Label>
             <Picker
-                ItemDisplayBinding="{Binding Name}"
+                ItemDisplayBinding="{Binding FullData}"
                 ItemsSource="{Binding Rates}"
                 SelectedItem="{Binding SourceRate, Mode=TwoWay}"
                 Title="Select a source rate">
@@ -38,7 +39,7 @@
             <Label Text="Source rate:">
             </Label>
             <Picker
-                ItemDisplayBinding="{Binding Name}"
+                ItemDisplayBinding="{Binding FullData}"
                 ItemsSource="{Binding Rates}"
                 SelectedItem="{Binding TargetRate, Mode=TwoWay}"
                 Title="Select a target rate">
@@ -48,13 +49,8 @@
             </ActivityIndicator>
             <Button
                 Command="{Binding ConvertCommand}"
-                BackgroundColor="Navy"
-                BorderRadius="20"
-                HeightRequest="40"
-                FontAttributes="Bold"
-                IsEnabled="{Binding isEnabled, Mode=TwoWay}"
-                Text="Convert"
-                TextColor="White">
+                Text="Hola"
+                >
             </Button>
             <Label
                 BackgroundColor="Silver"
